<resources>
    <string name="app_name">SporTEC</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_not_register">This user is not registered</string>
    <!--Facebook login-->
    <string name="facebook_app_id">1850787681668057</string>
    <string name="fb_login_protocol_scheme">fb1850787681668057</string>
    <string name="fb_login_error">Error trying to login wirh Facebook</string>
    <!--drawer menu-->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_news">News</string>
    <string name="nav_sports">Sports</string>
    <string name="nav_team_profile">Team Profile</string>
    <string name="nav_challenges">Challenges</string>
    <string name="nav_log_out">Log Out</string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
