<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_menu_sports"
            android:title="@string/nav_sports" />
        <item
            android:id="@+id/nav_team_profile"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/nav_team_profile" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_menu_challenges"
            android:title="@string/nav_challenges" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_log_out" />
    </group>
</menu>
